feat(reset-password): Set new password (#13)
- Create password reset form
- Add password validations
- Connect submit handler to the reset link
- Render server responses upon submission

[Finishes #165207314]

--- a/src/assets/styles/authentication/Login.scss
+++ b/src/assets/styles/authentication/Login.scss
@@ -36,3 +36,7 @@
     }
   }
 }
+
+.MuiInput-underline-29:hover:not(.MuiInput-disabled-28):not(.MuiInput-focused-27):not(.MuiInput-error-30):before, .MuiInput-underline-29:before {
+  border-bottom: unset !important;
+}
