--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -2,7 +2,6 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Avenir, Medium;
-  height: 100%;
 }
 
 * {
@@ -33,7 +32,6 @@ html, body {
 .doc-img{
  opacity: 0.80;
  width: 100%;
- height: 100%;
  overflow: hidden;
 }
 
@@ -86,11 +84,6 @@ html, body {
   visibility: 'visible';
 }
 
-/* Transition of checkbox */
-.MuiCheckbox-colorPrimary-184.MuiCheckbox-checked-181 {
-  color: #FAF33E !important;
-}
-
 /* Transition of textfiled labels  */
 .MuiFormLabel-root-16, .jss16 {
   color: #A3A3A3 !important;
@@ -108,8 +101,9 @@ html, body {
 }
 
 .MuiInputAdornment-root-166, .jss166{
-  color: #A3A3A3;
+  color: #A3A3A3 !important;
 }
+
 
 /* Register Page */
 .register-btn{
@@ -225,7 +219,7 @@ html, body {
   justify-content: center !important;
 }
 
-.MuiInputBase-root-36 {
+.MuiInputBase-root-36, .MuiInputBase-input-46, .jss46 {
   color: #E8E8E8 !important; 
 }
 
@@ -308,4 +302,19 @@ html, body {
 
 .alert-button{
   color: #FAF33E !important;
+}
+/* password reset */
+
+.password-icon{
+  color: #A3A3A3 !important;
+  padding: 5px !important;
+}
+
+.password-field{
+  padding-bottom: 25px !important;
+}
+
+/* select country code */
+.form-code{
+  padding-bottom: 30px !important;
 }
