--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -68,7 +68,13 @@ html, body {
   margin: 0 auto;
 }
 
-.small-anchor, .small-text{
+.small-anchor{
+  font-size: 100%;
+  color: #A3A3A3;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.small-text{
   font-size: 90%;
   color: #A3A3A3;
   font-family: Arial, Helvetica, sans-serif;
@@ -104,6 +110,9 @@ html, body {
   color: #A3A3A3 !important;
 }
 
+.MuiSelect-icon-156{
+  color: #A3A3A3 !important;
+}
 
 /* Register Page */
 .register-btn{
@@ -156,6 +165,24 @@ html, body {
 .phone-grid{
   margin-top: 25px !important;
 }
+.grid-container{
+  margin-top: 25px !important;
+}
+
+.checkbox{
+  padding: 0 !important;
+}
+
+.loader{
+  display: block !important;
+  margin: 0 auto !important;
+}
+
+.bottom-section{
+  margin-top: 25px;
+}
+
+
 /* Login page */
 
 .login-email-field{
@@ -178,6 +205,7 @@ html, body {
   text-decoration: underline;
   font-family: Arial, Helvetica, sans-serif;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .reset-password{
@@ -188,9 +216,19 @@ html, body {
   padding: 0 !important;
 }
 
+.email-field{
+  width: 100%;
+  margin-bottom: 25px !important;
+}
+
+.login-phone-grid{
+  margin-top: 5px !important;
+}
+
 /* Alert Style */
 .successMsg{
   position: absolute;
+  font-weight: lighter;
    color: #3CC480;
    top: 50%; 
    left: 50%; 
@@ -199,6 +237,7 @@ html, body {
 
 .errorMsg{
   position: absolute;
+  font-weight: lighter;
    color:#FF4141;
    top: 50%; 
    left: 50%; 
@@ -264,9 +303,9 @@ html, body {
 }
 
 .dialog-email-msg{
-  padding-top: 15x !important;
+  margin-top: 45px !important;
   font: Avenir, Medium !important;
-  color: #E8E8E8 !important; 
+  color:#A3A3A3 !important; 
   font-size: 17px !important;
   text-align: center !important;
   justify-content: center !important;
@@ -317,4 +356,87 @@ html, body {
 /* select country code */
 .form-code{
   padding-bottom: 30px !important;
+}
+
+.email-highlight{
+  color: #FAF33E !important;
+}
+
+.error-section{
+  margin-top: 15px;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.alert-error{
+  color: #FF4141; 
+  font-size: 17px; 
+  font: Avenir, Book; 
+  margin-left: 40px !important;
+}
+
+
+/* checkbox */
+/* label css*/
+.check-container {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.check-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0; 
+  height: 22px;
+  width: 22px;
+  background-color: #424242;
+  border: 1px solid rgb(107, 107, 107);
+}
+
+/* yellow border after checking */
+.check-container input:checked ~ .checkmark {
+  border: 0.2px solid #FAF33E;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.check-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.check-container .checkmark:after {
+  left: 8px;
+  top: 2px; 
+  width: 5px;
+  height: 10px;
+  border: 0.2px solid #FAF33E;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
