--- a/src/assets/styles/stock/stock_products.scss
+++ b/src/assets/styles/stock/stock_products.scss
@@ -1,12 +1,3 @@
-div.loader-center {
-    > div {
-        margin-left: 50%;
-        z-index: 20;
-        position: absolute;
-        margin-top: -17%;
-    }
-}
-
 .sort.wrapper {
     display: -webkit-inline-box;
 }
@@ -27,4 +18,32 @@ div.loader-center {
 .tool-bar-elevation {
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 3px 1px -2px rgba(0,0,0,0.12);
     z-index: 120;
+}
+
+.quantity-input {
+    width: 80px;
+    height: 30px;
+    background-color: #cbdcf4;
+    border: none;
+    padding-left: 8px;
+    font-size: inherit;
+}
+
+.quantity-input::-webkit-inner-spin-button,
+.quantity-input::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
+
+.quantity-input:focus,
+.quantity-input:active {
+    border: 1px solid #1C7CFF;
+    outline: 0;
+}
+
+.approve-products {
+    left: -4px !important;
+    transform: translate3d(1035px, 57px, 0px) !important;
 }
