#166127856-Add a new product (#23)
* feat(products): Add new product(s)
- Add a new product form
- Add image upload component
- Add react-tags component
- Prefill select components with values from the backend
- Implement functionality to check if product already exists.
- Implement add product functionality
- Add import csv component
- Add download csv template button and functionality
- Implement import csv functionality

[Finishes #166127856]

* feature(products): Improve error handling

- Prevent redirection when an error occurs
- align changed queries

[Finishes #166127856]

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -356,6 +356,13 @@ html, body {
 /* select country code */
 .form-code{
   padding-bottom: 30px !important;
+
+}
+/* tags */
+.ReactTags__tagInputField{
+  border: none;
+  outline: none;
+  font-size: 14px;
 }
 
 .email-highlight{
@@ -439,4 +446,43 @@ html, body {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+.ReactTags__tag{
+  border-radius: 5px;
+  padding: 5px;
+  margin-left: 8px;
+  background-color: #424242;
+  color: #E8E8E8;
+
+}
+
+.ReactTags__remove{
+  margin-left: 8px;
+}
+
+.ReactTags__tagInput{
+  display: inline;
+  padding-left: 3px;
+}
+
+/* Fields Table */
+.fields-title{
+  font-weight: lighter;
+  font-style: italic;
+  font-family: Avenir, Medium
+}
+
+.fields-table{
+  width: 100%;
+  text-align: left;
+  margin-left: 3%;
+}
+
+.fields-tr{
+  margin-left: 25%;
+}
+
+.required-field{
+  margin-left: 25%;
+  padding: 3%;
 }
