--- a/src/assets/styles/authentication/Login.scss
+++ b/src/assets/styles/authentication/Login.scss
@@ -6,6 +6,10 @@
     color: #A3A3A3;
     width: 29%;
   }
+  .login-switch{
+    color: #A3A3A3;
+    width: 29%;
+  }
   .email-label {
     color: #A3A3A3;
     padding-left: 3%;
@@ -19,20 +23,59 @@
     }
   }
 
+  .switch-email-label {
+    color: #A3A3A3;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #424242;
+    cursor: pointer;
+    &--active {
+      color: #FAF33E;
+      padding-left: 3%;
+      padding-right: 3%;
+      padding-bottom: 5px;
+      border-bottom: 2px solid #FAF33E;
+      cursor: pointer;
+    }
+    &--active:focus{
+      outline: none;
+    }
+  }
+
   .separator {
     width: 23%;
+  }
+  .separator-switch{
+    width: 20px;
   }
 
   .phone-label {
     color: #A3A3A3;
     border-bottom: 2px solid #424242;
-    padding-left: 10%;
-    width: 50%;
+    padding-bottom: 5px;
     &--active {
       color: #FAF33E;
       border-bottom: 2px solid #FAF33E;
-      width: 50%;
-      padding-left: 10%;
+      padding-bottom: 5px;
+    }
+  }
+
+  .switch-phone-label {
+    color: #A3A3A3;
+    border-bottom: 2px solid #424242;
+    padding-left: 3%;
+    padding-right: 3%;
+    cursor: pointer;
+    &--active {
+      color: #FAF33E;
+      border-bottom: 2px solid #FAF33E;
+      padding-left: 3%;
+      padding-right: 3%;
+      cursor: pointer;
+    }
+    &--active:focus{
+      outline: none;
     }
   }
 }
