--- a/src/assets/styles/stock/stock_products.scss
+++ b/src/assets/styles/stock/stock_products.scss
@@ -26,7 +26,7 @@
     background-color: #cbdcf4;
     border: none;
     padding-left: 8px;
-    font-size: inherit;
+    font-size: 14px;
 }
 
 .quantity-input::-webkit-inner-spin-button,
