--- a/src/assets/styles/suppliers/sliderLabel.scss
+++ b/src/assets/styles/suppliers/sliderLabel.scss
@@ -3,14 +3,16 @@
   height: 0.5rem;
   opacity: 0;
 }
+
 .input-range .input-range__track {
-  background: #938c085d;
   height: 0.5rem;
 }
+
 .input-range .input-range__track--active {
   background: #938c08;
   height: 0.5rem;
 }
+
 .sliderLabel {
   background-color: #938c08;
   width: 2.7rem;
@@ -24,28 +26,55 @@
   margin-top: -3.7rem;
   margin-left: 12rem;
 }
+
 .InputRangeClassNames {
   height: 5rem;
 }
+
 .inputSlider {
   margin-top: 10rem;
 }
-.input-range {
-  margin-top: 1.5rem;
-}
+
 .breakpoints {
-  width: 26.9rem;
   height: 0.2rem;
-  margin-top: 1.1rem;
+  margin-top: 0.9rem;
   font-size: 0.7rem;
+  letter-spacing: 0;
+  color: #424242;
+  opacity: 1;
+
+  .fbreack {
+    margin-left: -0.2rem;
+  }
 
   .sbreak {
-    margin-left: 7rem;
+    margin-left: 9rem;
   }
+
   .tbreak {
-    margin-left: 7rem;
+    margin-left: 10rem;
   }
+
   .fbreak {
-    margin-left: 5.4rem;
+    margin-left: 7.8rem;
+  }
+}
+
+.breakpoint {
+  height: 0.2rem;
+  margin-top: 0.8rem;
+  font-size: 0.7rem;
+  color: #E4E4E4;
+
+  .sbreak {
+    margin-left: 16rem;
+  }
+
+  .tbreak {
+    margin-left: 15rem;
+  }
+
+  .fbreak {
+    margin-left: 14.1rem;
   }
 }
