bug(products): Add Products (batch upload) (#109)
- Fix download csv template button
- Reformat the UI on Import Product CSV page

[Maintains #168794596]

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -512,6 +512,11 @@ html, body {
   margin-left: -0.5rem;
 }
 
+.fields-table-products {
+  width: 108%;
+  margin-left: -1.5rem;
+}
+
 .or {
   color: #7f7d7d;
 }
