ft(supplier note):Delete supplier note (#111)
- Add functionality to delete supplier note
- Add their tests

[Delivers #169390030 ]

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -555,9 +555,9 @@ tr.fields-tr {
   vertical-align: initial;
 }
 
-svg.MuiSvgIcon-root-143 {
+/* svg.MuiSvgIcon-root-143 {
   margin-left: -0.5rem;
-}
+} */
 
 .supplierStar {
   width: 40px !important;
