--- a/src/assets/styles/salesHistory/dateTimePopper.css
+++ b/src/assets/styles/salesHistory/dateTimePopper.css
@@ -10,38 +10,58 @@
 .input-range__slider {
   background: linear-gradient(#FAF33E, #7D7A1F);
   border: 0;
-  border-radius: 0;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
   margin-left: -0.5rem;
   margin-top: -0.85rem;
-  width: 2.7rem;
-  height: 1.1rem;
 }
 
-.input-range__label-container {
-  position: relative;
-  display: inline;
-  color: #423f3f;
-  top: 1rem;
+.rangeslider-horizontal {
+  height: 8px !important;
 }
 
-.input-range__label--value {
-  z-index: 500;
+.rangeslider-horizontal .rangeslider__fill {
+  background-color: #938C1E !important;
+}
+
+.rangeslider .rangeslider__handle-tooltip {
+  display: none !important;
+}
+
+.rangeslider-horizontal .rangeslider__handle:after{
+  display: none !important;
+}
+
+.rangeslider-horizontal .rangeslider__handle{
+  background: linear-gradient(#FAF33E, #7D7A1F);
+  border: 0 !important;
+  border-radius: 0 !important;
+  border-top-right-radius: 10px !important;
+  border-top-left-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
+  border-bottom-left-radius: 10px !important;
+  width: 2.7rem !important;
+  height: 1.2rem !important;
+  outline: none;
+  box-shadow: none;
+}
+
+.rangeslider .rangeslider__handle {
   cursor: pointer;
-  left: 0.8rem;
+  text-align: center;
+  font-size: small;
+  color: #424242;
+}
+
+.rangeslider, .rangeslider .rangeslider__fill {
+  box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.4) !important;
+}
+
+.rangeslider {
+  margin: 12px 0 !important;
 }
 
 .input-range__slider:active {
   -webkit-transform: none;
   transform: none;
-}
-
-.input-range__track--background {
-  height: 0.1em;
-  margin-top: 0.25rem;
 }
 
 .rdrCalendarWrapper {
